# share.rs

./: Cargo.toml  README.md  config.yml
.github/workflows/: tagged-release.yml  test.yml
src/: config.rs  main.rs  store.rs
