[package]
name = "shares"
version = "0.1.0"
authors = ["Leon Camus <leon.c@gmx.de>"]
edition = "2018"

[dependencies]
actix-web = "3.0.0-beta.3"
actix-multipart = "0.3.0-beta.1"
actix-files = "0.3.0-beta.1"
sanitize-filename = "0.2.1"
config = "0.9"
serde = "1.0.115"
futures = "0.3.5"
base32 = "0.4.0"
rand = "0.7.3"
ring = "0.17.0-alpha.4"
urlencoding = "1.1.1"
