[package]
name = "shares"
version = "1.0.0"
authors = ["Leon Camus <leon.c@gmx.de>"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0"
actix-files = "0"
sanitize-filename = "0"
serde_yaml = "0"
serde = { version = "1", features = ["derive"] }
futures = "0"
base32 = "0"
rand = "0"
ring = "0"
urlencoding = "1"

[dev-dependencies]
mime = "0"
